Updated API spec
